- IMPROVE: IVYDE classpath container should support bundle types by default (IVYDE-121)
- IMPROVE: Set current working dir to eclipse project location (IVYDE-52)
- IMPROVE: Make the classpath entries order configuration UI more intuitive (IVYDE-104)
- IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)

- FIX: IvyDE does not do property value expansion (IVYDE-90)
- FIX: Resolve in workspace does not pick up all projects in workspace (IVYDE-118) (thanks to Matt Goldspink)
- FIX: Ivy editor: code completion missing for matcher attribute of conflicts manager (IVYDE-99)
- FIX: The project dependencies and the errors markers are conflicting (IVYDE-116) 
- FIX: same jar files get downloaded 3 times (binary, javadoc and sources jar files are identical) (IVYDE-117)
- FIX: IvyDE crashes during resolve due to an incompatibility with Eclipse 3.2 (IVYDE-108)
- FIX: Ivy preferences page mentions ivyconf not ivysettings (IVYDE-103)
- FIX: Resolve is not triggered anymore with Eclipse 3.4 (IVYDE-110)
- FIX: An incorrect configuration of a container make 3 error popup (IVYDE-112)
- FIX: IvyDE does not honour the "validate" Attribute in a ivysetting file (IVYDE-96)

  version 2.0.0 alpha1
===========================
- NEW: [build] Use the latest ivy to resolve dependencies (IVYDE-62) (thanks to Nicolas Lalevee) 
- NEW: Order alphabetically the entries in the class path container (IVYDE-69) (thanks to Nicolas Lalevee)

- IMPROVE: The dialog box opened for resolve failure should show the status message on several lines (IVYDE-95)
- IMPROVE: Recognize more source and javadoc artifacts names (IVYDE-66) (thanks to Nicolas Lalevee)
- IMPROVE: Use Ivy Bundle instead of packaging ivy.jar in IvyDE bundle (IVYDE-67)
- IMPROVE: enable 'Resolve all' action (IVYDE-42) (thanks to Thomas FRIOL)
- IMPROVE: Support javadoc and sources even in modules where they are not declared (IVYDE-46)